--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
-hello <input id='message' />
+<input value="4ina"/>
 
+<h1>Алгоритм   </h1>
+
+<ul>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>5</li>
+    <li>6</li>
+    <li>7</li>
+</ul>
 <script>
-    setInterval(function(){
-        var messageInput = document.getElementById('message');
-        window.alert(messageInput.value);
-    }, 4000);
+    window.alert('alarm 1')
+    window.alert('alarm 2')
+    window.alert('alarm 3')
+    window.alert('alarm 4')
+    window.alert('alarm 5')
+    window.alert('alarm 6')
+    window.alert('alarm 7')
+    window.alert('alarm 8')
+    window.alert('alarm 9')
+    window.alert('alarm 10')
+
 </script>
