--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<input value="4ina"/>
+<input value="4ina" class='tratra-tra' id='input'/>
 
 <h1>Алгоритм   </h1>
 
@@ -12,15 +12,10 @@
     <li>7</li>
 </ul>
 <script>
-    window.alert('alarm 1')
-    window.alert('alarm 2')
-    window.alert('alarm 3')
-    window.alert('alarm 4')
-    window.alert('alarm 5')
-    window.alert('alarm 6')
-    window.alert('alarm 7')
-    window.alert('alarm 8')
-    window.alert('alarm 9')
-    window.alert('alarm 10')
-
+    var tratratra;
+    var blablabla;
+    blablabla='input';
+    tratratra = document.getElementById(blablabla);
+    window.alert(tratratra.value);
+  
 </script>
