--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     blablabla='input';
     tratratra = document.getElementById(blablabla);
     window.alert(tratratra.value);
+    var classs;
+    classs=('4ina')
   
 </script>
