--- a/index.html
+++ b/index.html
@@ -11,13 +11,4 @@
     <li>6</li>
     <li>7</li>
 </ul>
-<script>
-    var tratratra;
-    var blablabla;
-    blablabla='input';
-    tratratra = document.getElementById(blablabla);
-    window.alert(tratratra.value);
-    var classs;
-    classs=('4ina')
-  
-</script>
+<script src="script.js"></script>
