--- a/index2.html
+++ b/index2.html
@@ -1,9 +1,9 @@
 <div class='calculator'>
     <div class="operation-block">
-        <button id="buttonPlus">+</button>
-        <button id="buttonMinus">-</button>
-        <button id="buttonMulti">*</button>
-        <button id="buttonDel">/</button>
+        <button class="operation-button" id="buttonPlus">+</button>
+        <button class="operation-button" id="buttonMinus">-</button>
+        <button class="operation-button" id="buttonMulti">*</button>
+        <button class="operation-button" id="buttonDel">/</button>
     </div>
     <div class='separator'>
         <hr />
