--- a/slider/index.html
+++ b/slider/index.html
@@ -5,5 +5,6 @@
 </div>
 
 <link rel="stylesheet" href="style.css">
+<script src="slider.js"></script>
 <script src="object.js"></script>
 <script src="js.js"></script>
